
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int recv_buf ;


 int dump_hex (char*,char*,int) ;
 int recv (int,char*,int,int ) ;
 int send (int,char const*,int,int ) ;

int send_data(int sock,const char *send_data,int send_len)
{
  int wc;
  int rc;
  char recv_buf[1000];

  if(send_data && send_len > 0)
    {
      wc=send(sock,send_data,send_len,0);
    }
  rc=recv(sock,recv_buf,sizeof(recv_buf),0);

  if(rc > 0)
    {
      dump_hex("recv",recv_buf,rc);
    }
}
