; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_sparc/remote/extr_346.c_send_data.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_sparc/remote/extr_346.c_send_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"recv\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_data(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [1000 x i8], align 16
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load i32, i32* %7, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = load i32, i32* %5, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @send(i32 %17, i8* %18, i32 %19, i32 0)
  store i32 %20, i32* %8, align 4
  br label %21

21:                                               ; preds = %16, %13, %3
  %22 = load i32, i32* %5, align 4
  %23 = getelementptr inbounds [1000 x i8], [1000 x i8]* %10, i64 0, i64 0
  %24 = call i32 @recv(i32 %22, i8* %23, i32 1000, i32 0)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp sgt i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %21
  %28 = getelementptr inbounds [1000 x i8], [1000 x i8]* %10, i64 0, i64 0
  %29 = load i32, i32* %9, align 4
  %30 = call i32 @dump_hex(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %28, i32 %29)
  br label %31

31:                                               ; preds = %27, %21
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @dump_hex(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
